// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesktopDocumentTechnicalTableResults component Renders correctly when multiple documents are present for asset types 1`] = `
<body>
  <div>
    <div
      class="css-1fxw3xf"
      data-testid="desktop-tech-results-table"
    >
      <div
        class="css-46e850"
      >
        <table
          class="MuiTable-root Table-rowNoColor css-wsrw3a-MuiTable-root"
          data-testid="table"
        >
          <thead
            class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
            data-testid="table-head"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head DocumentTechnicalTableResults-headerRow css-47w8l6-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                MC: documentLibrary.headers.product
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium DocumentTechnicalTableResults-assetTypeCell css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                asset-code
                <div
                  class="css-1fxw3xf"
                  data-testid="asset-header-tech-results-table"
                >
                  <div
                    class=""
                    data-mui-internal-clone-element="true"
                  >
                    <button
                      class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-42 Button-text MuiIconButton-sizeLarge css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium DocumentTechnicalTableResults-tooltipIcon css-i4bv87-MuiSvgIcon-root"
                        data-testid="InfoIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium DocumentTechnicalTableResults-allFilesHeader css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="DocumentTechnicalTableResults-allFilesHeaderWrapper"
                >
                  <svg
                    class="DocumentTechnicalTableResults-allFilesIcon"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    MC: documentLibrary.headers.allFiles
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
              >
                product name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              >
                <span
                  aria-label="MC: documents.download.maxReached"
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <div
                    class="MuiFormControl-root css-pqkqag-MuiFormControl-root"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                    >
                      <span
                        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                      >
                        <input
                          aria-label="MC: documentLibrary.download product1"
                          class="PrivateSwitchBase-input css-1m9pwf3"
                          data-indeterminate="false"
                          name="product-base-code-0"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </span>
                    </label>
                  </div>
                </span>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
              >
                product3
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`DesktopDocumentTechnicalTableResults component Renders correctly when not all products have all asset types 1`] = `
<body>
  <div>
    <div
      class="css-1fxw3xf"
      data-testid="desktop-tech-results-table"
    >
      <div
        class="css-46e850"
      >
        <table
          class="MuiTable-root Table-rowNoColor css-wsrw3a-MuiTable-root"
          data-testid="table"
        >
          <thead
            class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
            data-testid="table-head"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head DocumentTechnicalTableResults-headerRow css-47w8l6-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                MC: documentLibrary.headers.product
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium DocumentTechnicalTableResults-assetTypeCell css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                asset-code
                <div
                  class="css-1fxw3xf"
                  data-testid="asset-header-tech-results-table"
                >
                  <div
                    class=""
                    data-mui-internal-clone-element="true"
                  >
                    <button
                      class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-42 Button-text MuiIconButton-sizeLarge css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium DocumentTechnicalTableResults-tooltipIcon css-i4bv87-MuiSvgIcon-root"
                        data-testid="InfoIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium DocumentTechnicalTableResults-assetTypeCell css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                asset-code
                <div
                  class="css-1fxw3xf"
                  data-testid="asset-header-tech-results-table"
                >
                  <div
                    class=""
                    data-mui-internal-clone-element="true"
                  >
                    <button
                      class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-42 Button-text MuiIconButton-sizeLarge css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium DocumentTechnicalTableResults-tooltipIcon css-i4bv87-MuiSvgIcon-root"
                        data-testid="InfoIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium DocumentTechnicalTableResults-allFilesHeader css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="DocumentTechnicalTableResults-allFilesHeaderWrapper"
                >
                  <svg
                    class="DocumentTechnicalTableResults-allFilesIcon"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    MC: documentLibrary.headers.allFiles
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
              >
                product name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              >
                <a
                  data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost:9000/document.pdf\\"}"
                  download="pim document title"
                  href="http://localhost:9000/document.pdf"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    class="DocumentTechnicalTableResults-formatIcon format-icon"
                    data-name="Layer 2"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 2H6v28h21V10Zm7 27H7V3h12v7h7Z"
                      style="fill: #aeb1b1;"
                    />
                  </svg>
                </a>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              >
                <a
                  data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost:9000/document.pdf\\"}"
                  download="pim document title"
                  href="http://localhost:9000/document.pdf"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    class="DocumentTechnicalTableResults-formatIcon format-icon"
                    data-name="Layer 2"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 2H6v28h21V10Zm7 27H7V3h12v7h7Z"
                      style="fill: #aeb1b1;"
                    />
                  </svg>
                </a>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              >
                <span
                  aria-label="MC: documents.download.maxReached"
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <div
                    class="MuiFormControl-root css-pqkqag-MuiFormControl-root"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                    >
                      <span
                        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                      >
                        <input
                          aria-label="MC: documentLibrary.download product1"
                          class="PrivateSwitchBase-input css-1m9pwf3"
                          data-indeterminate="false"
                          name="product-base-code-0"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </span>
                    </label>
                  </div>
                </span>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
              >
                product3
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`DesktopDocumentTechnicalTableResults component Renders correctly when only single documents are present for asset types 1`] = `
<body>
  <div>
    <div
      class="css-1fxw3xf"
      data-testid="desktop-tech-results-table"
    >
      <div
        class="css-46e850"
      >
        <table
          class="MuiTable-root Table-rowNoColor css-wsrw3a-MuiTable-root"
          data-testid="table"
        >
          <thead
            class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
            data-testid="table-head"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head DocumentTechnicalTableResults-headerRow css-47w8l6-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                MC: documentLibrary.headers.product
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium DocumentTechnicalTableResults-assetTypeCell css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                asset-code
                <div
                  class="css-1fxw3xf"
                  data-testid="asset-header-tech-results-table"
                >
                  <div
                    class=""
                    data-mui-internal-clone-element="true"
                  >
                    <button
                      class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-42 Button-text MuiIconButton-sizeLarge css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium DocumentTechnicalTableResults-tooltipIcon css-i4bv87-MuiSvgIcon-root"
                        data-testid="InfoIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium DocumentTechnicalTableResults-allFilesHeader css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                <span
                  class="DocumentTechnicalTableResults-allFilesHeaderWrapper"
                >
                  <svg
                    class="DocumentTechnicalTableResults-allFilesIcon"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    MC: documentLibrary.headers.allFiles
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
              >
                product name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              >
                <span
                  aria-label="MC: documents.download.maxReached"
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <div
                    class="MuiFormControl-root css-pqkqag-MuiFormControl-root"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                    >
                      <span
                        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                      >
                        <input
                          aria-label="MC: documentLibrary.download product1"
                          class="PrivateSwitchBase-input css-1m9pwf3"
                          data-indeterminate="false"
                          name="product-base-code-0"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </span>
                    </label>
                  </div>
                </span>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
              >
                product3
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;
